objects/HealthCloudGA__EhrRelatedObservation__c.object
<CustomObject>
    <description>Observations related to a parent observation.</description>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Observation</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>EHR Related Observations</relationshipLabel>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedObservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Observation</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>EHR Related Observations (Related Observation)</relationshipLabel>
        <relationshipName>RelatedObservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeLabel__c</fullName>
        <label>Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TypeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Type__c</fullName>
        <description>Type of relationship between observations</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>has-component</fullName>
                </value>
                <value>
                    <fullName>has-member</fullName>
                </value>
                <value>
                    <fullName>derived-from</fullName>
                </value>
                <value>
                    <fullName>sequel-to</fullName>
                </value>
                <value>
                    <fullName>replaces</fullName>
                </value>
                <value>
                    <fullName>qualified-by</fullName>
                </value>
                <value>
                    <fullName>interfered-by</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EHR Related Observation</label>
    <nameField>
        <displayFormat>RelOb-{0}</displayFormat>
        <label>EHR Related observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Related Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>